Kleopatra needs to create the UI-Server socket in the socketdir which is Local\gnupg on Windows and a directory in /var/run on Linux. gpgconf knows the correct location.
See T5613: GpgEX does not use CSIDL_LOCAL_APPDATA for a proposed patch
Kleopatra needs to create the UI-Server socket in the socketdir which is Local\gnupg on Windows and a directory in /var/run on Linux. gpgconf knows the correct location.
See T5613: GpgEX does not use CSIDL_LOCAL_APPDATA for a proposed patch
| rKLEOPATRA Kleopatra | |||
| rKLEOPATRA21c6c0898a1d Ask GnuPG for the correct path for the uiserver socket | |||
| rKLEOPATRA16073f7e4fa7 Ask GnuPG for the correct path for the uiserver socket | |||
| rKLEOPATRAa0883f369a65 Ask GnuPG for the correct path for the uiserver socket | |||