Ask GnuPG for the correct path for the uiserver socket

This ensures that clients find the uiserver socket used by Kleopatra.

GnuPG-bug-id: 5619